--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/stanislav-halyn/adventure-capitalist-client#readme",
   "scripts": {
-    "start": "webpack-dev-server --mode development --config ./webpack/webpack.config.js --open --hot", 
+    "start": "webpack-dev-server --mode development --config ./webpack/webpack.config.js --open --hot",
     "build": "webpack --mode production --config ./webpack/webpack.config.js"
   },
   "husky": {
@@ -28,9 +28,13 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "awesome-typescript-loader": "5.2.1",
+    "css-loader": "3.5.3",
     "cz-customizable": "6.2.0",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
+    "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "4.14.1",
+    "sass-loader": "8.0.2",
     "typescript": "3.9.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
