--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "node": ">11.15.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "8.3.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
-    "@commitlint/cli": "8.3.5",
+    "@types/react-redux": "7.1.9",
+    "@types/socket.io-client": "1.4.33",
     "awesome-typescript-loader": "5.2.1",
     "css-loader": "3.5.3",
     "cz-customizable": "6.2.0",
@@ -44,7 +46,10 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5",
+    "socket.io-client": "2.3.0"
   },
   "config": {
     "commitizen": {
