--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-typescript": "7.9.0",
     "@commitlint/cli": "8.3.5",
+    "@types/jest": "25.2.3",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
