--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.3.6",
     "react": "16.13.1",
+    "react-css-modules": "4.7.11",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
