--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
     "socket.io-client": "2.3.0"
   },
   "config": {
