build: add eslint

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "webpack-dev-server --mode development --config ./webpack/webpack.config.js --open --hot",
     "build": "webpack --mode production --config ./webpack/webpack.config.js",
     "test": "jest ./src --passWithNoTests --config ./config/jest/jest.config.js",
-    "test:watch": "jest ./src --watch --passWithNoTests --config ./config/jest/jest.config.js"
+    "test:watch": "jest ./src --watch --passWithNoTests --config ./config/jest/jest.config.js",
+    "lint": "eslint . --ext .ts,.tsx",
+    "stylelint": "stylelint ./src/**/*.scss"
   },
   "husky": {
     "hooks": {
@@ -37,15 +39,25 @@
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/socket.io-client": "1.4.33",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
     "awesome-typescript-loader": "5.2.1",
     "css-loader": "3.5.3",
     "cz-customizable": "6.2.0",
+    "eslint": "7.1.0",
+    "eslint-config-airbnb-typescript": "7.2.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
     "jest": "26.0.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.14.1",
     "sass-loader": "8.0.2",
+    "stylelint": "13.5.0",
+    "stylelint-config-recommended": "3.0.0",
     "ts-jest": "26.0.0",
     "typescript": "3.9.3",
     "webpack": "4.43.0",
