--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "homepage": "https://github.com/stanislav-halyn/adventure-capitalist-client#readme",
   "scripts": {
     "start": "webpack-dev-server --mode development --config ./webpack/webpack.config.js --open --hot",
-    "build": "webpack --mode production --config ./webpack/webpack.config.js"
+    "build": "webpack --mode production --config ./webpack/webpack.config.js",
+    "test": "jest ./src --passWithNoTests --config ./config/jest/jest.config.js",
+    "test:watch": "jest ./src --watch --passWithNoTests --config ./config/jest/jest.config.js",
+    "lint": "eslint . --ext .ts,.tsx",
+    "stylelint": "stylelint ./src/**/*.scss"
   },
   "husky": {
     "hooks": {
@@ -26,25 +30,49 @@
     "node": ">11.15.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
     "@commitlint/cli": "8.3.5",
+    "@types/jest": "25.2.3",
+    "@types/react": "16.9.35",
+    "@types/react-css-modules": "4.6.2",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
+    "@types/socket.io-client": "1.4.33",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
     "awesome-typescript-loader": "5.2.1",
     "css-loader": "3.5.3",
     "cz-customizable": "6.2.0",
+    "eslint": "7.1.0",
+    "eslint-config-airbnb-typescript": "7.2.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
+    "jest": "26.0.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.14.1",
     "sass-loader": "8.0.2",
+    "stylelint": "13.5.0",
+    "stylelint-config-recommended": "3.0.0",
+    "ts-jest": "26.0.0",
     "typescript": "3.9.3",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@types/react": "16.9.35",
-    "@types/react-dom": "16.9.8",
+    "@reduxjs/toolkit": "1.3.6",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-css-modules": "4.7.11",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "socket.io-client": "2.3.0"
   },
   "config": {
     "commitizen": {
