--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.5.3",
     "cz-customizable": "6.2.0",
+    "dotenv-webpack": "1.8.0",
     "eslint": "7.1.0",
     "eslint-config-airbnb-typescript": "7.2.1",
     "eslint-plugin-import": "2.20.2",
